examples/globalnetworkpolicies/1000.namespace-label-intra-allow.yml
# Copyright 2020 SIGHUP s.r.l
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: sighup-intra-allow
spec:
  order: 1000
  namespaceSelector: 'tenant == "sighup"'
  ingress:
    - action: Allow
      source:
        namespaceSelector: 'tenant == "sighup"'
  egress:
    - action: Allow
      destination:
        namespaceSelector: 'tenant == "sighup"'
