examples/globalnetworkpolicies/401.allow-custom-cidr-from-namespace.yml
# Copyright (c) 2022 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: allow-custom-cidr-from-sighup
spec:
  order: 401
  selector: projectcalico.org/namespace in {'sighup'}
  egress:
    - action: Allow
      destination:
        nets:
          - 1.2.3.4/32
  types:
    - Egress
