examples/globalnetworkpolicies/500.control-plane-traffic.yml
# Copyright (c) 2022 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: whitelist-control-plane
spec:
  order: 500
  selector: projectcalico.org/namespace not in {'default', 'ingress-nginx', 'istio-system', 'kube-system', 'logging', 'monitoring', 'registry','gatekeeper-system','cert-manager'}
  egress:
    - action: Allow
      destination:
        nets:
          - 172.16.0.3/32 # you apiserver ips list
  types:
    - Egress
